# query-agent

./: .gitignore  CLAUDE.md  LICENSE  README.md  config-local.yaml  config-server.yaml  config.yaml  prompts.txt  pyproject.toml  requirements-server.txt  requirements.txt
src/: __init__.py  agent.py  business_registry.py  business_selection_service.py  config.py  conversation_state.py  db_pool.py  error_memory.py  field_knowledge.py  knowledge_store.py  llm_provider.py  main.py  preference_rules.py  prompt_service.py  prompts.py  query_mcp_server.py  query_plan.py  query_rule_executor.py  sql_risk_checker.py  sql_validator.py  tool_execution_service.py
tests/: conftest.py  test_agent.py  test_business_registry.py  test_config.py  test_db_pool.py  test_error_memory.py  test_main.py  test_preference_rules.py  test_prompts.py  test_query_mcp_server.py  test_sql_risk_checker.py  test_sql_validator.py
